--- a/front-end/src/app/qsl/qsl.component.html
+++ b/front-end/src/app/qsl/qsl.component.html
@@ -55,7 +55,7 @@
       <td style="border-bottom-left-radius: 8px;">{{qso.callsign}}</td>
       <td>{{qso.date}}</td>
       <td>{{qso.time}}</td>
-      <td>{{qso.band}}</td>
+      <td>{{qso.frequency}}</td>
       <td style="border-bottom-right-radius: 8px;">{{qso.rst}}</td>
     </tr>
     </tbody>
