--- a/front-end/src/app/log-book/log-book.component.html
+++ b/front-end/src/app/log-book/log-book.component.html
@@ -48,10 +48,9 @@
         <div class="card" *ngFor="let qso of qsos | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize; index as i; even as even;">
           <div class="card-header p-0" data-toggle="collapse" [attr.data-target]="'#collapse'+i">
             <div class="row m-0 sortable" id="accordion-row" [ngStyle]="{'background-color': even ? 'white' : ''}">
-              <div class="col-md-3 col-4 p-1">{{qso.date.year}}-{{qso.date.month}}-{{qso.date.day}}</div>
-              <div class="col-md-2 col-4 p-1" *ngIf="qso.time.minute!==0">{{qso.time.hour}}:{{qso.time.minute}}</div>
-              <div class="col-md-2 col-4 p-1" *ngIf="qso.time.minute===0">{{qso.time.hour}}:00</div>
-              <div class="col-md-2 col-4 p-1" >{{qso.callsign}}</div>
+              <div class="col-md-3 col-4 p-1">{{qso.date | date :'mediumDate' :'GMT'}}</div>
+              <div class="col-md-3 col-4 p-1">{{qso.time | date : 'shortTime' : 'GMT'}}</div>
+              <div class="col-md-3 col-4 p-1" >{{qso.callsign}}</div>
               <div class="col-md-2 d-none d-md-block p-1">{{qso.frequency}}</div>
               <div class="col-md-1 d-none d-md-block p-1">{{qso.rst}}</div>
             </div>
