fixed a logbook view bug

--- a/front-end/src/app/log-book/log-book.component.html
+++ b/front-end/src/app/log-book/log-book.component.html
@@ -59,7 +59,7 @@
           </div>
           <div id="{{'collapse'+i}}" class="collapse" data-parent="#accordion">
             <div class="card-body p-0">
-              <div class="row d-sm-none d-md-flex none m-0">
+              <div class="row d-none d-md-flex none m-0">
                 <div class="col-2 p-1"><b>RST sent:</b></div>
                 <div class="col-2 p-1">{{qso.rstSent}}</div>
                 <div class="col-2 p-1"><b>RST rec:</b></div>
@@ -196,5 +196,4 @@
       </div>
     </div>
   </div>
-
 </div>
