--- a/front-end/src/app/qsl/qsl.component.html
+++ b/front-end/src/app/qsl/qsl.component.html
@@ -53,10 +53,10 @@
     <tbody>
     <tr>
       <td style="border-bottom-left-radius: 8px;">{{qso.callsign}}</td>
-      <td>{{qso.date}}</td>
-      <td>{{qso.time}}</td>
+      <td>{{qso.dateTime}}</td>
+      <td>{{qso.dateTime}}</td>
       <td>{{qso.frequency}}</td>
-      <td style="border-bottom-right-radius: 8px;">{{qso.rst}}</td>
+      <td style="border-bottom-right-radius: 8px;">{{qso.rstReceived}}</td>
     </tr>
     </tbody>
   </table>
