--- a/front-end/src/app/log-book/log-book.component.html
+++ b/front-end/src/app/log-book/log-book.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#logBook" role="tab" id="addQsoLink">Log Book</a>
+          <a class="nav-link active" data-toggle="tab" href="#logBook" role="tab" id="logBookLink">Log Book</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#addQso" role="tab">Add a QSO</a>
