--- a/front-end/src/app/request-qsl/request-qsl.component.html
+++ b/front-end/src/app/request-qsl/request-qsl.component.html
@@ -5,7 +5,7 @@
     <div class="form-group row">
       <label class="col-form-label col-md-2" for="date">Date</label>
       <div class="input-group col-lg-4 col-md-10">
-        <input class="form-control" id="date" name="date" [(ngModel)]="qso.date" #date="ngModel" #d="ngbDatepicker" ngbDatepicker placeholder="yyyy-mm-dd" required>
+        <input class="form-control" id="date" name="date" [(ngModel)]="qsoDate" #date="ngModel" #d="ngbDatepicker" ngbDatepicker placeholder="yyyy-mm-dd" required>
         <div class="input-group-append">
           <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
         </div>
@@ -15,7 +15,7 @@
     <div class="form-group row d-flex align-items-center">
       <label class="col-form-label col-md-2" for="time">UTC</label>
       <div class="input-group col-lg-4 col-md-10">
-        <ngb-timepicker name="time" id="time" [(ngModel)]="qso.time" #time="ngModel" required></ngb-timepicker>
+        <ngb-timepicker name="time" id="time" [(ngModel)]="qsoTime" #time="ngModel" required></ngb-timepicker>
       </div>
       <div class="form-text text-danger col-md-4 offset-lg-0 offset-md-2" id="timeError" *ngIf="(qslForm.touched||qslForm.dirty)&&time.invalid">Time is required</div>
     </div>
