--- a/front-end/src/app/request-qsl/request-qsl.component.html
+++ b/front-end/src/app/request-qsl/request-qsl.component.html
@@ -27,6 +27,9 @@
       <div class="form-text text-danger col-md-4 offset-lg-0 offset-md-2" id="csReq" *ngIf="(qslForm.touched||qslForm.dirty)&&callsign.errors?.required">Callsign is required</div>
       <div class="form-text text-danger col-md-4 offset-lg-0 offset-md-2" id="csInv" *ngIf="(qslForm.touched||qslForm.dirty)&&!callsign.errors?.required&&callsign.invalid">Callsign is invalid</div>
     </div>
+    <div class="form-group row">
+      <div class="form-text text-danger col-md-10 offset-md-2" id="qsoNotFound" *ngIf="qsoNotFound">No QSO found</div>
+    </div>
     <button class="btn btn-primary offset-md-2" type="submit" [disabled]="qslForm.form.invalid">Submit</button>
   </form>
 </div>
