--- a/front-end/src/app/log-book/log-book.component.html
+++ b/front-end/src/app/log-book/log-book.component.html
@@ -113,7 +113,7 @@
 
     <div class="tab-pane" id="addQso" role="tabpanel">
       <!-- Add a QSO form: -->
-      <form class="mt-4" id="addQsoForm" #addQsoForm="ngForm" (ngSubmit)="onSubmit()">
+      <form class="mt-4" id="addQsoForm" #addQsoForm="ngForm" (ngSubmit)="addQso()">
         <div class="form-group row d-flex align-items-center">
           <label class="col-form-label col-lg-1 col-md-2" for="date">Date</label>
           <div class="input-group col-lg-5 col-md-10">
